Fixes z-index of foundation tooltip to make it works with tooltipster

--- a/app/assets/stylesheets/client_admin/tile_preview.css.scss
+++ b/app/assets/stylesheets/client_admin/tile_preview.css.scss
@@ -101,6 +101,10 @@ body.client_admin-tiles-show, body.suggested_tiles-show {
 
  /* BEGIN TOOLTIPSTER STYLES OVERRIDES */
 
+  .tooltipster-base ~ .tooltip {
+    z-index: 99999999999;
+  }
+
   & .tooltipster-content {
 
     // => Share Section
